<resources>
    <string name="app_name">Weird Calculator</string>
    <string name="input_first">Введите первое число</string>
    <string name="input_second">Введите второе число</string>
    <string name="plus">Сложить</string>
    <string name="minus">Вычесть</string>
    <string name="multiply">Умножить</string>
    <string name="divide">Разделить</string>
    <string name="result">Результат:</string>
    <string name="calculate">Вычислить</string>
    <string name="calculator">Калькулятор</string>
    <string name="Form">Форма</string>
    <string name="Calendar">Календарь</string>
    <string name="text">Текст</string>
    <string name="name">Имя</string>
    <string name="phone">Телефон</string>
    <string name="number">Число</string>
    <string name="password">Пароль</string>
    <string name="email">Почта</string>
    <string name="calculator_error">Что-то пошло не так</string>
    <string name="night_theme">Темная тема</string>
    <string name="light_theme">Светлая тема</string>
</resources>